fix: overflow issue on code snippets

--- a/apps/web/app/(marketing)/style/shiki.css
+++ b/apps/web/app/(marketing)/style/shiki.css
@@ -63,6 +63,7 @@
   font-family: var(--font-mono);
   font-weight: 500;
   display: grid;
+  overflow: auto;
 }
 
 .shiki .line {
